tests/programs/invalid/this_call.java
public class this_call {
  public A(String x) {}
  public A(int x) {
    this("foo");
  }
}